AUGREL/src/objects/Form_Rule__c.object
<CustomObject>
    <description>In the initial processing of rights letters, drives correct form selection, links to form definition objects, and encodes compliance values.</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Primary selection criteria identifying retail or lease product.</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Primary selection criteria to align Form Rule with the case.</description>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>RL Notice of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Notice of Sale-Salvage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: T/F whether certified mailing requirements apply.</description>
        <label>Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Till_Sale__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Identifies the minimum number of days required between notice date and legal sale date.</description>
        <label>Days Till Sale</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Purely informational and identifies forms that are associated - use Form-Rule Junction to specify forms to print with rights letter generation request.</description>
        <label>Form</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_State_Repo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Secondary selection criteria to support California’s distinction between in-state and out-of-state repossession handling.</description>
        <label>In-State Repo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Arbitrary unique number assigned to the record to facilitate migration of metadata between environments.</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_Working_Day_Rule__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Rule for processing when calculated required notice date falls on a non-working day (applies to Calendar and Hours basis).</description>
        <label>Non-Working Day Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Preceding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Following</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_Calendar__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Basis for time measurement in calculating required notice date (Calendar, Business, Hours).</description>
        <label>Notice Calendar</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_RL_Notice_of_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: T/F whether a post-rights letter notice of sale case is required to be generated upon completion of rights letter.</description>
        <inlineHelpText>Used to indicate whether a follow-up notice of sale is required after the initial rights letter generation. MD is the only state to initially require it.</inlineHelpText>
        <label>Post-RL Notice of Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Rights__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Yes/No/Conditional picklist to indicate reinstatement rules for state.</description>
        <label>Reinstatement Rights</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repossession_Record_Type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Assigning the correct record type for a repossession record associated with a rights letter case.</description>
        <label>Repossession Record Type</label>
        <picklist>
            <controllingField>Account_Type__c</controllingField>
            <picklistValues>
                <fullName>RL Retail-Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Retail-Conditional Reinstatement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Retail-CA In-State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Retail-CA Out-of-State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Lease-Generic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RL Lease-Conditional Reinstatement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Calendar__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Basis for time measurement in calculating legal sale date (Calendar, Business).</description>
        <label>Sale Calendar</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salvage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Primary selection criteria to support different notice of sale form for salvage.</description>
        <label>Salvage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Jurisdiction__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Primary selection criteria to align Form Rule with the case.</description>
        <label>State of Jurisdiction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Till_Notice__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Identifies the maximum amount of time that may pass between date of repossession and notice date.</description>
        <label>Time Till Notice</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voluntary_Surrender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Secondary selection criteria to support different forms for leases.</description>
        <label>Voluntary Surrender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iRepo_SLA__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Time allowed from repossession date for iRepo to populate template data.</description>
        <label>iRepo SLA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>State_of_Jurisdiction__c</columns>
        <columns>In_State_Repo__c</columns>
        <columns>Salvage__c</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Repossession_Record_Type__c</columns>
        <columns>Voluntary_Surrender__c</columns>
        <columns>iRepo_SLA__c</columns>
        <columns>Time_Till_Notice__c</columns>
        <columns>Notice_Calendar__c</columns>
        <columns>Non_Working_Day_Rule__c</columns>
        <columns>Days_Till_Sale__c</columns>
        <columns>Sale_Calendar__c</columns>
        <columns>Reinstatement_Rights__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Rules</pluralLabel>
    <recordTypes>
        <fullName>RL_Notice_of_Sale</fullName>
        <active>true</active>
        <description>Forms and rules specific to the notice of sale sub-process for specific rights letters (MD-only initially)</description>
        <label>RL Notice of Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rights_Letters</fullName>
        <active>true</active>
        <description>Forms and rules specific to the rights letters process</description>
        <label>Rights Letters</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>